# SURF2022

./: CMakeLists.txt  Interpolator_chebyshev.cpp  Interpolator_chebyshev.h  Interpolator_trilinear.cpp  Interpolator_trilinear.h  README.md  Testframe_interpolator_chebyshev.cpp  main.cpp  main_cheb.cpp
Hermite/: CMakeLists.txt  Interpolator_Hermite.cpp  Interpolator_Hermite.h  Testframe.cpp
Piecewise/: CMakeLists.txt  Piecewise_trilinear.cpp  Piecewise_trilinear.h  Testframe.cpp  main.cpp
